Compilation and code fixes
module-registry :
- finishing the JarModuleBuilder implementation to allow the load of resources from jars during tests
- Adding a JarModuleBuilderTest class, with tests for the JarModuleBuilder
- Adding an OSGIModuleBuilderTest

Calabash :
- deactivating namespace rewriting for inlined XSLTs to bypass a missing namespace error (the namespace contained in attributes value can be missed by the saxon API)
- Update the gradle build to use the annotation processor with java 11
- Adding a maven pom to launch the gralde build process from the global aggregator or using maven from the local repo
- Removing some deprecated call

Jing :
- Re enable the use of the custom ant distribution in the maven build